fix jdb_bench to be work with java 11